Resolve some isses with cors and css

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -51,7 +51,7 @@
     />
 
     <!-- Template Main CSS File - local-->
-    <link href="./assets/css/main.css" rel="stylesheet" />
+    <!-- <link href="./assets/css/main.css" rel="stylesheet" /> -->
   </head>
   <body>
     <app-root></app-root>
