--- a/web/src/index.html
+++ b/web/src/index.html
@@ -14,11 +14,11 @@
 
     <!-- Favicons -->
     <link
-      href="https://learnsmartcoding.blob.core.windows.net/assets/img/favicon.png"
+      href="https://reservespotstorage.blob.core.windows.net/assets/img/favicon.png"
       rel="icon"
     />
     <link
-      href="https://learnsmartcoding.blob.core.windows.net/assets/img/apple-touch-icon.png"
+      href="https://reservespotstorage.blob.core.windows.net/assets/img/apple-touch-icon.png"
       rel="apple-touch-icon"
     />
 
@@ -30,23 +30,25 @@
       rel="stylesheet"
     />
 
-    <!-- Vendor CSS Files - local -->
-
+    <!-- Vendor CSS Files - blob storage -->
     <link
-      href="./assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="https://reservespotstorage.blob.core.windows.net/assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="./assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link href="./assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="./assets/vendor/glightbox/css/glightbox.min.css"
+      href="https://reservespotstorage.blob.core.windows.net/assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
     <link
-      href="./assets/vendor/swiper/swiper-bundle.min.css"
+      href="https://reservespotstorage.blob.core.windows.net/assets/vendor/aos/aos.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://reservespotstorage.blob.core.windows.net/assets/vendor/glightbox/css/glightbox.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://reservespotstorage.blob.core.windows.net/assets/vendor/swiper/swiper-bundle.min.css"
       rel="stylesheet"
     />
 
@@ -60,12 +62,12 @@
     <!-- Vendor JS Files - local -->
     <!--For our website not all these JS required, we will clean up all these shortly.-->
     <!--When adding css or js in angular.json we need to stop and start server-->
-    <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="./assets/vendor/aos/aos.js"></script>
-    <script src="./assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="./assets/vendor/php-email-form/validate.js"></script>
+    <script src="https://reservespotstorage.blob.core.windows.net/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://reservespotstorage.blob.core.windows.net/assets/vendor/aos/aos.js"></script>
+    <script src="https://reservespotstorage.blob.core.windows.net/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="https://reservespotstorage.blob.core.windows.net/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="https://reservespotstorage.blob.core.windows.net/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="https://reservespotstorage.blob.core.windows.net/assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
     <!-- <script src="https://learnsmartcoding.blob.core.windows.net/assets/js/main.js"></script> -->
