Restaurant tiles and navigation to details page

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -51,6 +51,10 @@
       href="https://reservespotstorage.blob.core.windows.net/assets/vendor/swiper/swiper-bundle.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
 
     <!-- Template Main CSS File - local-->
     <!-- <link href="./assets/css/main.css" rel="stylesheet" /> -->
